tests/negative/gold/missing_setting2_test.gold
tests/negative/missing_setting2_test.toit:8:7: error: Can't set final field
  foo .x:
      ^~
Compilation failed.
